@@ -352,8 +352,8 @@ static inline int ramtron_readid(struct ramtron_dev_s *priv)
      
   if (priv->part->name)
     {
-      (void)manufacturer; /* Eliminate warnings when debug is off */
-      (void)memory;       /* Eliminate warnings when debug is off */
+      UNUSED(manufacturer); /* Eliminate warnings when debug is off */
+      UNUSED(memory);       /* Eliminate warnings when debug is off */
 
       fvdbg("RAMTRON %s of size %d bytes (mf:%02x mem:%02x cap:%02x part:%02x)\n",
             priv->part->name, priv->part->size, manufacturer, memory, capacity, part);
